syntax = "proto3";

option go_package = ".;pb";

package protocols.ipec;

message Task {
  string taskId = 1;
  string cid = 2;
  string description = 3;
  string ownerId = 4;
  int64 createdAt = 15;
}

message TaskRequest {
  Task task = 1;
  string senderId = 2;
}

message TaskAcceptAck {
  string taskId = 1;
  bool chosen = 2;
}

message TaskResponse {
  enum Status {
    ACCEPT = 0;
    REJECT = 1;
    SCHEDULED = 2;
    DONE = 3;
    FAILED = 4;
  }
  Status status = 1;
  string taskId = 2;
  bytes output = 3;
  int64 finishedAt = 4;
  int64 schedule = 5;
  string performerId = 6;
}